name:           hw-conduit
version:        0.2.0.5
synopsis:       Conduits for tokenizing streams.
description:    Conduits for tokenizing streams. Please see README.md
category:       Data, Conduit
homepage:       http://github.com/haskell-works/hw-conduit#readme
bug-reports:    https://github.com/haskell-works/hw-conduit/issues
author:         John Ky
maintainer:     newhoggy@gmail.com
copyright:      2016 John Ky
license:        MIT
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/haskell-works/hw-conduit

library
  exposed-modules:
      HaskellWorks.Data.Conduit.ByteString
      HaskellWorks.Data.Conduit.Combinator
      HaskellWorks.Data.Conduit.List
  other-modules:
      Paths_hw_conduit
  hs-source-dirs:
      src
  ghc-options: -Wall -O2 -msse4.2
  build-depends:
      array
    , base >=4.9 && <5
    , bytestring
    , conduit
    , conduit-combinators
    , time
    , transformers
    , unliftio-core
    , word8
  default-language: Haskell2010

test-suite hw-conduit-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      HaskellWorks.Data.Conduit.ByteStringSpec
      HaskellWorks.Data.Conduit.CombinatorSpec
      Paths_hw_conduit
  hs-source-dirs:
      test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.9 && <5
    , bytestring
    , conduit
    , hspec
    , hw-conduit
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover

benchmark bench
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Paths_hw_conduit
  hs-source-dirs:
      bench
  ghc-options: -Wall -O2 -msse4.2
  build-depends:
      base >=4.9 && <5
    , bytestring
    , conduit
    , criterion
    , hw-conduit
    , mmap
    , vector
  default-language: Haskell2010
